fix: add appsettings

--- a/Chats.API/appsettings.json
+++ b/Chats.API/appsettings.json
@@ -13,5 +13,9 @@
 
   "UserService": {
     "BaseUrl": "http://localhost:5001"
+  },
+
+  "NotifierChanger": {
+    "BaseUrl": "http://localhost:5002"
   }
 }
